[package]
name = "cbsignal_rs"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0.120"
flexi_logger = "0.28"
tklog = "0.0.8"
dashmap = "6.0.1"
axum = { version = "0.7", features = ["macros"] }
anyhow = "1.0.86"
thiserror = "1.0.62"
futures = "0.3.30"
headers = "0.4.0"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "with_axum", "unstable-split"] }
lru = "0.12.3"
log = "0.4.22"
serde_with = "3.9.0"
futures-util = "0.3.30"
async-trait = "0.1.81"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
http = "1.1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
systemstat = "0.2.3"
local-ip-address = "0.6.1"
pprof = { version = "0.13", features = ["flamegraph"] }
x509-parser = "0.16.0"
hmac = "0.12.1"
hex = "0.4.3"
md-5 = "0.10.6"
ratelimit = "0.9.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] } # 日志处理
tracing-appender = "0.2.3"

[profile.release]
overflow-checks = true